added the user panel and fixed the payment issue

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -63,7 +63,7 @@
         </div>
         <div class="col-sm-3">
             <h6 class="mt-3"><a href="">GET HELP</a></h6>
-            <a href="">Order Status</a>
+            <a href="{% url 'core:user_orders' %}">Order Status</a>
             <a href="">Shipping and Delivery</a>
             <a href="">Returns</a>
             <a href="">Payment Options</a>
